# stm-heaps

./: CoarseHeap.hs  ConcurrentHeap.hs  FineHeap.hs  FineHeapUnsafe.hs  Makefile  README.md  STMHeaps.cabal  TestCoarseHeap  TestFineHeap  TestHeap.hs  TestSort  TestSort.hs  stm-heaps.cabal
docs/: stm-heap-perf.xlsx  stm-heap-slides.pptx
src/: CoarseHeap.hs  ConcurrentHeap.hs  FineHeap.hs  FineHeapUnsafe.hs  TestHeap.hs  TestSort.hs
